--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+#firebase credentials
+firebase-debug.log
+firebase-credentials.json
